--- a/teste fg/FG.html
+++ b/teste fg/FG.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Teste FG</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -29,8 +29,8 @@
       </div>
     </div>
     <div class="inicio">
-      <img class="logo1" src="./img/logo.png">
-      <img class="logo2" src="./img/logo2.png">
+      <img class="logo1" alt="logo_empresa" src="./img/logo.png">
+      <img class="logo2" alt="logo_empresa" src="./img/logo2.png">
       <a href="#" class="fm"><b>HOME</b></a>
       <a href="#" class="fm">EMPRESA</a>
       <a href="#" class="fm">CONTATO</a>
@@ -53,21 +53,21 @@
     <div class="carousel-item active">
       <img class="d-block w-100" src="./img/banner.png" alt="First slide">
       <div class="carousel-caption d-block">
-        <h1><b>50 ANOS <br>DE MERCADO </b></h1>
+        <p><b>50 ANOS <br>DE MERCADO </b></p>
       </div>
     </div>
 
     <div class="carousel-item">
       <img class="d-block w-100" src="./img/banner.png" alt="Second slide">
       <div class="carousel-caption d-block">
-        <h1><b>50 ANOS <br>DE MERCADO </b></h1>
+        <p><b>50 ANOS <br>DE MERCADO </b></p>
       </div>
     </div>
 
     <div class="carousel-item">
       <img class="d-block w-100" src="./img/banner.png" alt="Third slide">
       <div class="carousel-caption d-sm-block d-md-block">
-        <h1><b>50 ANOS <br>DE MERCADO </b></h1>
+        <p><b>50 ANOS <br>DE MERCADO </b></p>
       </div>
     </div>
   </div>
@@ -104,10 +104,10 @@
 
 <p>
   <button id="veja" class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-  <div class="vejabut">
+  <div class="vejabut"></div>
     VEJA NOSSA EQUIPE<div class="giraricone">»</div>
-  </div>
   </button>
+
 </p>
 
 <div class="collapse" id="collapseExample" style="width: 56%;margin:auto;">
@@ -129,8 +129,8 @@
 <div class="rodape">
   <div class="dados">
     <p>Rua Genérica, nº123 <br> Centro - Santo André/SP</p>
-    <p href=""><b>contato@empresax.com.br</p>
-    <p href=""><i>+55 11 3564-3099</i></p>
+    <p><b>contato@empresax.com.br</b></p>
+    <p><i>+55 11 3564-3099</i></p>
   </div>
 </div>
   
