--- a/teste fg/FG.html
+++ b/teste fg/FG.html
@@ -104,10 +104,10 @@
 
 <p>
   <button id="veja" class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-  <div class="vejabut"></div>
+  <div class="vejabut">
     VEJA NOSSA EQUIPE<div class="giraricone">»</div>
   </button>
-
+</div>
 </p>
 
 <div class="collapse" id="collapseExample" style="width: 56%;margin:auto;">
